tests/it/snapshots/it__push__push_off_topic_stdout.snap
---
source: tests/it/push.rs
assertion_line: 832
expression: out.stdout
---
Pushing local changes...
  skip  libs/rolib (not on the topic)
