tests/it/snapshots/it__push__push_skip_artefact_stdout.snap
---
source: tests/it/push.rs
expression: out.stdout
---
Pushing local changes...
  skip  meta/app (artefact)
